nexus_ark_output.log
  File "/app/nexus_ark.py", line 126
    alarm_manager.load_alarms()
    ^^^^^^^^^^^^^
SyntaxError: expected 'except' or 'finally' block
